// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar tests Avatar snapshot test 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#F2F3F4",
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
        "minHeight": 600,
        "paddingBottom": 16,
        "paddingLeft": 16,
        "paddingRight": 16,
        "paddingTop": 16,
      },
    ]
  }
>
  <Text
    fontFamily="Muli-Bold"
    fontSize={20}
    lineHeight={26}
    style={
      [
        {
          "color": "#222222",
          "fontFamily": "Muli-Bold",
          "fontSize": 20,
          "lineHeight": 26,
        },
        {
          "marginBottom": 24,
        },
      ]
    }
  >
    Avatar:
  </Text>
  <View
    size={30}
    style={
      [
        {
          "borderRadius": 15,
          "height": 30,
          "overflow": "hidden",
          "width": 30,
        },
      ]
    }
  >
    <Image
      size={30}
      source={
        {
          "uri": "https://picsum.photos/120/120",
        }
      }
      style={
        [
          {
            "height": 30,
            "width": 30,
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`Avatar tests AvatarPlaceholder snapshot test 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#F2F3F4",
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
        "minHeight": 600,
        "paddingBottom": 16,
        "paddingLeft": 16,
        "paddingRight": 16,
        "paddingTop": 16,
      },
    ]
  }
>
  <Text
    fontFamily="Muli-Bold"
    fontSize={20}
    lineHeight={26}
    style={
      [
        {
          "color": "#222222",
          "fontFamily": "Muli-Bold",
          "fontSize": 20,
          "lineHeight": 26,
        },
        {
          "marginBottom": 24,
        },
      ]
    }
  >
    Avatar:
  </Text>
  <View
    size={30}
    style={
      [
        {
          "borderRadius": 15,
          "height": 30,
          "overflow": "hidden",
          "width": 30,
        },
      ]
    }
  >
    <Image
      size={30}
      source={
        {
          "uri": "",
        }
      }
      style={
        [
          {
            "height": 30,
            "width": 30,
          },
        ]
      }
    />
  </View>
</View>
`;
